--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
     </a>
 
     <!-- Кнопка добавления события в календарь -->
-    <a href="https://calendar.google.com/calendar/r/eventedit?dates=20250110T150000Z/20250112T110000Z&location=Zamek+Kliczków,+Kliczków+8,+59-724+Kliczków,+Польша&text=Свадьба%20Святослава%20и%20Алины&details=Приходьте%20и%20разом%20проведемо%20чудовий%20вікенд!" target="_blank" aria-label="Добавить в календарь">
-      <button class="calendar-button">
+    <a href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0AVERSION:2.0%0APRODID:-//Your Organization//Your Product//EN%0AMETHOD:PUBLISH%0ABEGIN:VEVENT%0AUID:smekhun@gmail.com%0ADTSTAMP:20240110T150000Z%0ADTSTART:20250110T150000Z%0ADTEND:20250112T110000Z%0ASUMMARY:%D0%92%D0%B5%D1%81%D1%96%D0%BB%D0%BB%D1%8F%20%D0%A1%D0%B2%D1%8F%D1%82%D0%BE%D1%81%D0%BB%D0%B0%D0%B2%D0%B0%20%D1%82%D0%B0%20%D0%90%D0%BB%D1%96%D0%BD%D0%B8%0ADESCRIPTION:%D0%97%D0%B0%D0%BF%D1%80%D0%BE%D1%88%D1%83%D1%94%D0%BC%D0%BE%20%D0%92%D0%B0%D1%81%20%D0%BD%D0%B0%20%D0%BD%D0%B0%D1%88%D0%B5%20%D0%BD%D0%B5%D0%B7%D0%B2%D0%B8%D1%87%D0%B0%D0%B9%D0%BD%D0%B5%20%D0%B2%D0%B5%D1%81%D1%96%D0%BB%D0%BB%D1%8F!%0A%D0%A2%D0%B5%D0%BB%D0%B5%D1%84%D0%BE%D0%BD:%20720%20279%20764%0ALOCATION:%D0%9A%D0%BB%D1%96%D1%87%D0%BA%D0%BE%D0%B2,%20%D0%9F%D0%BE%D0%BB%D1%8C%D1%88%D0%B0%0AEND:VEVENT%0AEND:VCALENDAR" download="invite.ics">
+    <button class="calendar-button">
         <img src="calendar_icon.png" class="calendar-image" alt="Calendar icon">
       </button>
     </a>
