--- a/index.html
+++ b/index.html
@@ -212,33 +212,33 @@
       uk: {
         title: "Ласкаво просимо на наше весілля!",
         invitation: `В сучасному світі молодята все частіше хочуть відзначити день свого весілля нестандартно. Ми не є винятком. Свято займе у нас з вами цілі вихідні. Ми насолодимося прекрасним спа, поплаваємо в басейні, скуштуємо смачну їжу і просто проведемо час у хорошій компанії. Традиційної обручальної церемонії не чекайте - це не про нас. 21 століття - століття онлайн технологій, у тому числі і весіль.<br><br>
-        <p class="left-align"> <span class="special-text"> Графік: <br> 10.01.2024, від 15:00 - заїзд в готель, басейн у вашому розпорядженні. <br>Або просто насолоджуйтесь спокоєм у своєму номері, у готелі є спа-центр. <br>Замість квітів подаруйте собі масаж або пару коктейлів.<br>
-        11.01.2024 - сніданок, активний відпочинок у басейні.<br>
+        <p class="left-align"> <span class="special-text"> Графік: <br> 10.01.2025, від 15:00 - заїзд в готель, басейн у вашому розпорядженні. <br>Або просто насолоджуйтесь спокоєм у своєму номері, у готелі є спа-центр. <br>Замість квітів подаруйте собі масаж або пару коктейлів.<br>
+        11.01.2025 - сніданок, активний відпочинок у басейні.<br>
         Потім о 15:00 - святковий обід і продовження відпочинку.<br>
-        12.01.2024 - сніданок, виселення з готелю.<br><br></span>
+        12.01.2025 - сніданок, виселення з готелю.<br><br></span>
         Так, це зовсім не схоже на традиційне весілля, але ми сподіваємося, що всі залишаться задоволеними. Чекаємо Вас з нетерпінням.<br><br>
-        Святослав та Аліна`
+        Аліна та Святослав`
       },
       en: {
         title: "Welcome to our wedding!",
         invitation: `In today's world, more and more couples want to celebrate their wedding day unconventionally. We are not exception. The celebration will take up an entire weekend with us. We will enjoy a wonderful spa, swim in the pool, taste delicious food, and simply spend time in good company. Don't expect a traditional ceremony - that's not about us. The 21st century is the age of online technologies, including weddings.<br><br>
-        <p class="left-align"> <span class="special-text"> Schedule: <br> January 10, 2024, after 3:00 PM - check-in at the hotel, pool at your disposal. <br>Or simply relax in your room. The hotel has a spa center. <br>Instead of flowers, treat yourself to a massage or a couple of cocktails.<br>
-        January 11, 2024 - breakfast, relaxation by the pool.<br>
+        <p class="left-align"> <span class="special-text"> Schedule: <br> January 10, 2025, after 3:00 PM - check-in at the hotel, pool at your disposal. <br>Or simply relax in your room. The hotel has a spa center. <br>Instead of flowers, treat yourself to a massage or a couple of cocktails.<br>
+        January 11, 2025 - breakfast, relaxation by the pool.<br>
         At 3:00 PM - festive lunch and continued relaxation.<br>
-        January 12, 2024 - breakfast, hotel check-out.<br><br></span>
+        January 12, 2025 - breakfast, hotel check-out.<br><br></span>
         No, this is not a traditional wedding, but we hope everyone will be pleased. We look forward to seeing you.<br><br>
-        Sviatoslav and Alina`
+        Alina and Sviatoslav`
       },
       cs: {
         title: "Vítejte na naší svatbě!",
         invitation: `V moderním světě stále více a více párů chce slavit svůj svatební den netradičně. My nejsme výjimkou. Oslava nám zabere celý víkend.<br>
         Užijeme si krásné lázně, zaplaveme si v bazénu, ochutnáme lahodné jídlo a strávíme čas v dobré společnosti. Nečekejte tradiční svatební obřad - to není o nás. 21. století je století online technologií, včetně svateb.<br> <br>
-        <p class="left-align"> <span class="special-text"> Program: <br> 10. 1. 2024 po 15:00 - příjezd do hotelu, bazén je k dispozici. <br>Nebo si jen odpočiňte ve svém pokoji, hotel má wellness centrum. <br>Místo květin si dopřejte masáž nebo pár koktejlů.<br>
-        11. 1. 2024 - snídaně, relaxace u bazénu.<br>
+        <p class="left-align"> <span class="special-text"> Program: <br> 10. 1. 2025 po 15:00 - příjezd do hotelu, bazén je k dispozici. <br>Nebo si jen odpočiňte ve svém pokoji, hotel má wellness centrum. <br>Místo květin si dopřejte masáž nebo pár koktejlů.<br>
+        11. 1. 2025 - snídaně, relaxace u bazénu.<br>
         Ve 15:00 - slavnostní oběd a pokračování odpočinku.<br>
-        12. 1. 2024 - snídaně, odjezd z hotelu.<br><br></span>
+        12. 1. 2025 - snídaně, odjezd z hotelu.<br><br></span>
         Ano, není to tradiční svatba, ale doufáme, že každý bude spokojen. Těšíme se na vás.<br><br>
-        Sviatoslav a Alina`
+        Alina a Sviatoslav`
       }
     };
 
